--- a/example01/package.json
+++ b/example01/package.json
@@ -2,7 +2,7 @@
   "name": "node-express",
   "version": "0.0.0",
   "scripts": {
-    "start": "node app.js",
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
@@ -12,7 +12,7 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0",
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
 
